# bill-splitter

./: .dockerignore  .env.example  CLAUDE.md  PLAN.md  docker-compose.e2e.yml  docker-compose.prod.yml
.devcontainer/: .tmux.conf  Dockerfile  devcontainer-lock.json  devcontainer.json  docker-compose.yml  post-create.sh
.github/workflows/: ci.yml  ocr-image.yml
backend/: .editorconfig  .gitignore  BillSplitter.sln  Directory.Packages.props  Dockerfile
deploy/: Caddyfile  docker-compose.caddy.yml
docs/: 00-overview.md  01-architecture.md  02-domain-model.md  03-redis-schema.md  04-api-contract.md  05-realtime-contract.md  06-ocr-service.md  07-backend-design.md  08-frontend-design.md  09-ux-flows.md  10-security-privacy.md  11-testing-strategy.md  12-ci.md  13-deployment.md  14-build-order.md  15-receipt-parsing.md
docs/adr/: 0001-self-hosted-ocr.md  0002-hub-claims-rest-lifecycle.md  0003-session-json-cas.md  0004-ephemeral-by-design.md  0005-integer-shares-claims.md  0006-receipt-parser-pipeline.md
e2e/: package.json
e2e/lib/: flow.mjs  receipt.mjs
e2e/specs/: manual-entry.test.mjs  two-phone-split.test.mjs
frontend/: .env.development  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
ocr/: .dockerignore  Dockerfile  pyproject.toml  requirements-ocr.txt  requirements.txt
ocr/app/: config.py  main.py  models.py  recognizer.py
ocr/fixtures/: sample-receipt.json
ocr/tests/: conftest.py  test_healthz.py  test_ocr.py  test_recognizer.py
ocr/tools/: record_fixture.py
scripts/: verify-ephemerality.sh
(+305 files in other folders)
