[project]
name = "bill-splitter-ocr"
version = "1.0.0"
description = "PaddleOCR sidecar for bill-splitter: image in, text lines out."
requires-python = ">=3.12"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
